[gd_scene load_steps=11 format=3 uid="uid://k5msw5fm124k"]

[ext_resource type="Script" uid="uid://doh7g3ch50gia" path="res://Main/game_manager.gd" id="1_272bh"]
[ext_resource type="PackedScene" uid="uid://bl1cf0r32i67t" path="res://Unit/Prototype/bg.tscn" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://d2rcul35yljaa" path="res://Unit/Enemy/enemy.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dnc5yjftuv7il" path="res://Unit/Player/player.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://duhpi6ih7unwk" path="res://Unit/Prototype/enemy_spwaner.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dsm8xf4dmc6xd" path="res://Unit/Prototype/game_speed.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://cukppeq26yfa1" path="res://Unit/UI/result_menu.tscn" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://c6mtgbu8f2fht" path="res://Asset/UI/InputPrompts/keyboard_enter.png" id="8_qac2q"]
[ext_resource type="Script" uid="uid://dxl17dpembjyc" path="res://Unit/Player/blink_canvs_item.gd" id="9_rj11h"]

[sub_resource type="LabelSettings" id="LabelSettings_f6fdm"]
font_size = 32

[node name="main" type="Node2D"]
metadata/_edit_vertical_guides_ = [-640.0]
metadata/_edit_horizontal_guides_ = [-2136.0]

[node name="BG" parent="." instance=ExtResource("1_h2yge")]

[node name="GameManager" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("1_272bh")
mission_time = 10.0
target_points = 100
player = NodePath("../Player")

[node name="Player" parent="." instance=ExtResource("2_h2yge")]
position = Vector2(1176, 2000)
metadata/_edit_horizontal_guides_ = [448.0]

[node name="Enemy" parent="." instance=ExtResource("2_1bvp3")]
position = Vector2(654, 782)

[node name="EnemySpwaner" parent="." instance=ExtResource("4_1bvp3")]

[node name="GameSpeed" parent="." instance=ExtResource("5_lquwl")]
game_speed_scale = Array[float]([3.0, 1.0])

[node name="GameHUD" type="CanvasLayer" parent="."]
layer = 128

[node name="ReadyToStart" type="Control" parent="GameHUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="GameHUD/ReadyToStart"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 120.0
offset_bottom = 210.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameHUD/ReadyToStart/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="GameHUD/ReadyToStart/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Press"
label_settings = SubResource("LabelSettings_f6fdm")

[node name="Control" type="Control" parent="GameHUD/ReadyToStart/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GameHUD/ReadyToStart/PanelContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -36.0
offset_right = 93.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_qac2q")

[node name="Label2" type="Label" parent="GameHUD/ReadyToStart/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "To Start the game."
label_settings = SubResource("LabelSettings_f6fdm")

[node name="BlinkCanvsItem" type="Node" parent="GameHUD/ReadyToStart/PanelContainer"]
script = ExtResource("9_rj11h")
blink_mode = "alpha"
duration = 1.0
interval = 0.5

[node name="ResultMenu" parent="GameHUD" instance=ExtResource("6_7mycd")]
